# Ingenieria_de_Software---Groba-Salomon-Di_Cola

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py  metrics.py  security.py
api/forecast/: __init__.py  routes.py
api/wells/: __init__.py  routes.py
docs/catedra/: Agenda_tecnica_fase_1.md  Doc_Requerimiento_Producto.md  TPI_Ing_SW.md
docs/decisions/: 0000-usar-registros-de-decisiones-arquitectónicas-en-markdown.md  0001-fast-api.md  0001-stack-tecnologico-fase-1.md  0002-dockerizacion-de-fastapi.md  0003-docker-compose-para-orquestacion.md  0003-estrategia-de-alertas.md  0004-ci-con-github-actions.md  0004-docker-compose-deploy.md  0005-cd-con-github-actions-via-ssh-a-ec2.md  0006-prometheus-para-metricas-de-la-api.md  0007-node-exporter-para-metricas-de-computo.md  0008-grafana-para-dashboards-y-alertas.md  9999-stack-tecnologico-fase-1.md  README.md  adr-template-bare-minimal.md  adr-template-bare.md  adr-template-minimal.md  adr-template.md  ci.md  herramienta-de-metricas.md  resumen-anterior.md
infra/: prometheus.yml
infra/grafana/dashboards/: api-dashboard.json  monitoreo.json
infra/grafana/provisioning/alerting/: contactpoints.yml  notificationpolicies.yml  rules.yml
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/rules/: alerts.yml
scripts/: demo-traffic.sh  integration-test.sh  smoke.sh
tests/: conftest.py  test_forecast.py  test_metrics.py  test_wells.py
