[tool.poetry]
name = "Ingenieria_de_Software---Groba-Salomon-Di_Cola"
version = "0.1.0"
description = "API de ejemplo con FastAPI"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.135.1"
pydantic = "^2.12.5"
DateTime = "^6.0"
uvicorn = "^0.41.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=6.0.0,<7.0.0"
pre-commit = ">=4.0.0,<5.0.0"
black = ">=24.10.0,<25.0.0"
flake8 = ">=7.1.0,<8.0.0"
pylint = ">=3.3.0,<4.0.0"
mypy = ">=1.13.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
